--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,8 @@
 worker_processes ${{NUM_WORKERS}};
-error_log stderr notice;
-daemon off;
+daemon on;
 pid logs/nginx.pid;
+
+user root;
 
 events {
   worker_connections 1024;
@@ -10,12 +11,34 @@ events {
 http {
   include mime.types;
 
+  server_tokens off;
+
+  ssl_certificate /etc/letsencrypt/live/www.guard13007.com/fullchain.pem;   # this is probably terrible
+  ssl_certificate_key /etc/letsencrypt/live/www.guard13007.com/privkey.pem;
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+  ssl_prefer_server_ciphers on;
+  ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+  ssl_ecdh_curve secp384r1; # Requires nginx >= 1.1.0
+  ssl_session_cache shared:SSL:10m;
+  ssl_session_tickets off; # Requires nginx >= 1.5.9
+  ssl_stapling on; # Requires nginx >= 1.3.7
+  ssl_stapling_verify on; # Requires nginx => 1.3.7
+  ssl_dhparam dhparams.pem;
+
+  # These should be defined per server, NOT in the proxy:
+  add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
+  add_header X-Frame-Options DENY;
+  add_header X-Content-Type-Options nosniff;
+
   server {
-    listen ${{PORT}};
+    listen ${{PORT}} ssl;
+    error_page 497 https://$host:$server_port$request_uri;
+
     lua_code_cache ${{CODE_CACHE}};
 
     location / {
       default_type text/html;
+      set $_url '';
       content_by_lua '
         require("lapis").serve("app")
       ';
